# dbus-task

./: CMakeLists.txt  Client.cxx  Connection.cxx  Connection.h  DBusClient.cxx  DBusConnection.cxx  DBusConnection.h  DBusConnectionBrokerKey.h  DBusHandleIO.cxx  DBusHandleIO.h  DBusMatchSignal.cxx  DBusMatchSignal.h  DBusMethodCall.cxx  DBusMethodCall.h  DBusObject.cxx  DBusObject.h  Destination.h  Error.cxx  Error.h  ErrorCategory.h  ErrorDomainManager.cxx  ErrorDomainManager.h  ErrorException.h  Interface.h  Makefile.am  Message.cxx  Message.h  README.md  client_side_concatenate_test.cxx  configure.m4  server_side_concatenate_test.cxx  systemd_sd-bus.cxx  systemd_sd-bus.h
System.Error/: .gitignore  CMakeLists.txt  Errors.cxx  Errors.h  SystemErrors.h  generate_SystemErrors.sh
org.freedesktop.DBus.Error/: CMakeLists.txt  Errors.cxx  Errors.h
tests/: CMakeLists.txt  client_side_concatenate_test.cxx  error_test.cxx  server_side_concatenate_test.cxx
tests/org.sdbuscpp.Concatenator.Error/: Errors.cxx  Errors.h
